src/test/ui/parser/unsized2.stderr
error: expected expression, found keyword `type`
  --> $DIR/unsized2.rs:8:7
   |
LL |     f<type>(); //~ ERROR expected expression, found keyword `type`
   |       ^^^^ expected expression

error: aborting due to previous error

